----------------------------------------------------------------------
 OmegaT 2.2.0 update 1 
----------------------------------------------------------------------
  3 Enhancements
  0 Bugfix
----------------------------------------------------------------------
2.2.0 update 1 vs. 2.2.0

  Other enhancements:

  - Galician localization updated to 2.1.9 (UI, Instant Start, Readme)
  - Italian localization updated to 2.2.0 (UI, Instant Start, Readme)
  - Japanese localization updated to 2.2.0 (UI, Instant Start, Readme)

----------------------------------------------------------------------
 OmegaT 2.2.0 
----------------------------------------------------------------------
  1 Enhancement
  3 Bugfixes
----------------------------------------------------------------------
2.2.0 vs. 2.1.9

  Implemented requests:

  - Create OmegaT tags for external TMX files
  http://sourceforge.net/support/tracker.php?aid=2891712

  Bug fixes:

  - With some fonts, "squares" were displayed in the Editor around 
segment markers

  - When the files in /source were changed, it was sometime not possible
to reload the project

  - When a search filter was used (e.g., "Display all results" unchecked, 
Author), the number of search results returned was limited to the number 
of unfiltered results

----------------------------------------------------------------------
 OmegaT 2.1.9
----------------------------------------------------------------------
  3 Enhancements
  4 Bugfixes
----------------------------------------------------------------------
2.1.9 vs. 2.1.8 update 1

  Other enhancements:

  - Swedish localisation updated to 2.1.8 (UI, Readme)
  - Italian localisation updated to 2.1.8 (UI, Readme, Instant Start)
  - Dutch localisation updated to 2.1.8 (UI, Readme, Instant Start, documentation)

  Bug fixes:

  - Still some corrections about the highlight of the search results

  - Rc filter: Correction on the handling of comments and includes
